--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <title>KOUNOTORI</title>
 <meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
-<link rel="stylesheet" type="text/css" href="css/base.css">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<link rel="stylesheet" type="text/css" href="css/index.css">
-<link rel="stylesheet" type="text/css" href="css/contact.css">
+<!-- <link rel="stylesheet" type="text/css" href="css/base.css"> -->
+<!-- <link rel="stylesheet" type="text/css" href="css/main.css"> -->
+<!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
+<!-- <link rel="stylesheet" type="text/css" href="css/contact.css"> -->
 	<link rel=”stylesheet” href=”https://taishi0209.github.io/kounotori.github.io/index.css”/>
 
 <script src="js/jquery.js" type="text/javascript"></script>
