--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- <link rel="stylesheet" type="text/css" href="css/main.css"> -->
 <!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
 <!-- <link rel="stylesheet" type="text/css" href="css/contact.css"> -->
-	<link rel=”stylesheet” href=”https://taishi0209.github.io/kounotori.github.io/index.css”/>
+	<link rel=”stylesheet” href=”https://taishi0209.github.io/kounotori.github.io/index.css”>
 
 <script src="js/jquery.js" type="text/javascript"></script>
 <script src="js/slider.js"></script>
